force-app/main/default/objects/Course__c/fields/Attendees_Count__c.field-meta.xml
<CustomField>
    <fullName>Attendees_Count__c</fullName>
    <label>Attendees Count</label>
    <summaryForeignKey>Course_Participation__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>