force-app/main/default/objects/Course__c/fields/Tutor__c.field-meta.xml
<CustomField>
    <fullName>Tutor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tutor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Person__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tutor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>