force-app/main/default/objects/Course__c/validationRules/Credit_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>( Credit__c &gt;100)|| ( Credit__c &lt;1)</errorConditionFormula>
    <errorDisplayField>Credit__c</errorDisplayField>
    <errorMessage>Credit must be between 1 and 100</errorMessage>
</ValidationRule>