force-app/main/default/objects/Course__c/validationRules/Dates_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Dates_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>(Start_Date__c &gt;=  End_Date__c)||( Start_Date__c &lt; TODAY() )</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Invalid dates</errorMessage>
</ValidationRule>