force-app/main/default/objects/Course__c/validationRules/Seats_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Seats_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Available_Seats__c &lt;0</errorConditionFormula>
    <errorMessage>No available seats!</errorMessage>
</ValidationRule>