force-app/main/default/objects/Course__c/listViews/Completed.listView-meta.xml
<ListView>
    <fullName>Completed</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Completed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Completed</label>
</ListView>